# AuskaBot

./: README.md  anime.py  main.py  pyproject.toml
